// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`focus switching > then renders left focus indicator when focused on changes 1`] = `
[
  "[borderAccent:╭][borderAccent:─────────────────────────────────][border:┬][border:────────────────────────────────────────────────────────────────────────────────────][border:╮]",
  "[borderAccent:│][borderAccent:[accent: Stack (1)                       ]][border:│][border:[accent: [dim:a] change a                                                                   ]][border:│]",
  "[borderAccent:├][borderAccent:─────────────────────────────────][border:┼][border:────────────────────────────────────────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│][BG:selectedBg:◆ [accent:**change[border:│][dim: No files changed]                                                             [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:├][border:────────────────────────────────────────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│]                                 [border:│][accent: Diff: all (a)                                                                      ][border:│]",
  "[borderAccent:│]                                 [border:├][border:────────────────────────────────────────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│]                                 [border:│][dim: No content]                                                                   [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:├][borderAccent:─────────────────────────────────][border:┴][border:────────────────────────────────────────────────────────────────────────────────────][border:┤]",
  "[border:│][dim:                                                                                                                      ][border:│]",
  "[border:╰][border:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][border:╯]",
]
`;

exports[`focus switching > then renders right focus indicator when focused on files 1`] = `
[
  "[border:╭][border:─────────────────────────────────][border:┬][borderAccent:────────────────────────────────────────────────────────────────────────────────────][borderAccent:╮]",
  "[border:│][border:[accent: Stack (1)                       ]][border:│][borderAccent:[accent: [dim:a] change a                                                                   ]][borderAccent:│]",
  "[border:├][border:─────────────────────────────────][border:┼][borderAccent:────────────────────────────────────────────────────────────────────────────────────][borderAccent:┤]",
  "[border:│]◆ change a           [dim: Alice][border:│][BG:selectedBg:󰜈 [toolDiffAdded:src/main.tsx]                                 [toolD[borderAccent:│]",
  "[border:│]                                 [border:│]                                                                                    [borderAccent:│]",
  "[border:│]                                 [border:│]                                                                                    [borderAccent:│]",
  "[border:│]                                 [border:│]                                                                                    [borderAccent:│]",
  "[border:│]                                 [border:│]                                                                                    [borderAccent:│]",
  "[border:│]                                 [border:│]                                                                                    [borderAccent:│]",
  "[border:│]                                 [borderAccent:├][borderAccent:────────────────────────────────────────────────────────────────────────────────────][borderAccent:┤]",
  "[border:│]                                 [borderAccent:│][accent: Diff: src/main.tsx (a)                                                             ][borderAccent:│]",
  "[border:│]                                 [borderAccent:├][borderAccent:────────────────────────────────────────────────────────────────────────────────────][borderAccent:┤]",
  "[border:│]                                 [border:│][dim: No content]                                                                   [borderAccent:│]",
  "[border:│]                                 [border:│]                                                                                    [borderAccent:│]",
  "[border:│]                                 [border:│]                                                                                    [borderAccent:│]",
  "[border:│]                                 [border:│]                                                                                    [borderAccent:│]",
  "[border:│]                                 [border:│]                                                                                    [borderAccent:│]",
  "[border:│]                                 [border:│]                                                                                    [borderAccent:│]",
  "[border:│]                                 [border:│]                                                                                    [borderAccent:│]",
  "[border:│]                                 [border:│]                                                                                    [borderAccent:│]",
  "[border:│]                                 [border:│]                                                                                    [borderAccent:│]",
  "[border:│]                                 [border:│]                                                                                    [borderAccent:│]",
  "[border:│]                                 [border:│]                                                                                    [borderAccent:│]",
  "[border:│]                                 [border:│]                                                                                    [borderAccent:│]",
  "[border:│]                                 [border:│]                                                                                    [borderAccent:│]",
  "[border:├][border:─────────────────────────────────][border:┴][border:────────────────────────────────────────────────────────────────────────────────────][border:┤]",
  "[border:│][dim:                                                                                                                      ][border:│]",
  "[border:╰][border:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][border:╯]",
]
`;

exports[`loading state > then renders loading indicator 1`] = `
[
  "[borderAccent:╭][borderAccent:─────────────────────────────────][border:┬][border:────────────────────────────────────────────────────────────────────────────────────][border:╮]",
  "[borderAccent:│][borderAccent:[accent: Stack (0)                       ]][border:│][border:[accent: Files                                                                              ]][border:│]",
  "[borderAccent:├][borderAccent:─────────────────────────────────][border:┼][border:────────────────────────────────────────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│][dim: Loading...]                [border:│][dim: No files changed]                                                             [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:├][border:────────────────────────────────────────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│]                                 [border:│][accent: Diff                                                                               ][border:│]",
  "[borderAccent:│]                                 [border:├][border:────────────────────────────────────────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│]                                 [border:│][dim: No content]                                                                   [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:├][borderAccent:─────────────────────────────────][border:┴][border:────────────────────────────────────────────────────────────────────────────────────][border:┤]",
  "[border:│][dim:                                                                                                                      ][border:│]",
  "[border:╰][border:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][border:╯]",
]
`;

exports[`move mode > then renders move indicator on cursor change 1`] = `
[
  "[borderAccent:╭][borderAccent:─────────────────────────────────][border:┬][border:────────────────────────────────────────────────────────────────────────────────────][border:╮]",
  "[borderAccent:│][borderAccent:[accent: Stack (2)                       ]][border:│][border:[accent: [dim:a] change a                                                                   ]][border:│]",
  "[borderAccent:├][borderAccent:─────────────────────────────────][border:┼][border:────────────────────────────────────────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│][BG:selectedBg:◆ [warning:↕ ][war[border:│][dim: No files changed]                                                             [border:│]",
  "[borderAccent:│]◆ change b             [dim: Bob][border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:├][border:────────────────────────────────────────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│]                                 [border:│][accent: Diff: all (a)                                                                      ][border:│]",
  "[borderAccent:│]                                 [border:├][border:────────────────────────────────────────────────────────────────────────────────────][border:┤]",
  "[borderAccent:│]                                 [border:│][dim: No content]                                                                   [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:│]                                 [border:│]                                                                                    [border:│]",
  "[borderAccent:├][borderAccent:─────────────────────────────────][border:┴][border:────────────────────────────────────────────────────────────────────────────────────][border:┤]",
  "[border:│][dim:                                                                                                                      ][border:│]",
  "[border:╰][border:──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────][border:╯]",
]
`;
